public/css/flags.css
/* taken directly from 4chan because it's an elegant solution */

.flag {
  display: inline-block;
  width: 16px;
  height: 11px;
  position: relative;
  top: 1px;
  background: url('/static/flags.png') no-repeat;
  image-rendering: pixelated;
}

.flag-ad { background-position: 0 0 }
.flag-ae { background-position: -16px 0 }
.flag-af { background-position: -32px 0 }
.flag-ag { background-position: -48px 0 }
.flag-ai { background-position: -64px 0 }
.flag-al { background-position: -80px 0 }
.flag-am { background-position: -96px 0 }
.flag-an { background-position: -112px 0 }
.flag-ao { background-position: -128px 0 }
.flag-aq { background-position: -144px 0 }
.flag-ar { background-position: -160px 0 }
.flag-as { background-position: -176px 0 }
.flag-at { background-position: -192px 0 }
.flag-au { background-position: -208px 0 }
.flag-aw { background-position: -224px 0 }
.flag-ax { background-position: -240px 0 }
.flag-az { background-position: 0 -11px }
.flag-ba { background-position: -16px -11px }
.flag-bb { background-position: -32px -11px }
.flag-bd { background-position: -48px -11px }
.flag-be { background-position: -64px -11px }
.flag-bf { background-position: -80px -11px }
.flag-bg { background-position: -96px -11px }
.flag-bh { background-position: -112px -11px }
.flag-bi { background-position: -128px -11px }
.flag-bj { background-position: -144px -11px }
.flag-bl { background-position: -160px -11px }
.flag-bm { background-position: -176px -11px }
.flag-bn { background-position: -192px -11px }
.flag-bo { background-position: -208px -11px }
.flag-bq { background-position: -224px -11px }
.flag-br { background-position: -240px -11px }
.flag-bs { background-position: 0 -22px }
.flag-bt { background-position: -16px -22px }
.flag-bv { background-position: -32px -22px }
.flag-bw { background-position: -48px -22px }
.flag-by { background-position: -64px -22px }
.flag-bz { background-position: -80px -22px }
.flag-ca { background-position: -96px -22px }
.flag-catalonia { background-position: -112px -22px }
.flag-cc { background-position: -128px -22px }
.flag-cd { background-position: -144px -22px }
.flag-cf { background-position: -160px -22px }
.flag-cg { background-position: -176px -22px }
.flag-ch { background-position: -192px -22px }
.flag-ci { background-position: -208px -22px }
.flag-ck { background-position: -224px -22px }
.flag-cl { background-position: -240px -22px }
.flag-cm { background-position: 0 -33px }
.flag-cn { background-position: -16px -33px }
.flag-co { background-position: -32px -33px }
.flag-cr { background-position: -48px -33px }
.flag-cs { background-position: -64px -33px }
.flag-cu { background-position: -80px -33px }
.flag-cv { background-position: -96px -33px }
.flag-cw { background-position: -112px -33px }
.flag-cx { background-position: -128px -33px }
.flag-cy { background-position: -144px -33px }
.flag-cz { background-position: -160px -33px }
.flag-de { background-position: -176px -33px }
.flag-dj { background-position: -192px -33px }
.flag-dk { background-position: -208px -33px }
.flag-dm { background-position: -224px -33px }
.flag-do { background-position: -240px -33px }
.flag-dz { background-position: 0 -44px }
.flag-ec { background-position: -16px -44px }
.flag-ee { background-position: -32px -44px }
.flag-eg { background-position: -48px -44px }
.flag-eh { background-position: -64px -44px }
.flag-xe { background-position: -80px -44px }
.flag-er { background-position: -96px -44px }
.flag-es { background-position: -112px -44px }
.flag-et { background-position: -128px -44px }
.flag-eu { background-position: -144px -44px }
.flag-fam { background-position: -160px -44px }
.flag-fi { background-position: -176px -44px }
.flag-fj { background-position: -192px -44px }
.flag-fk { background-position: -208px -44px }
.flag-fm { background-position: -224px -44px }
.flag-fo { background-position: -240px -44px }
.flag-fr { background-position: 0 -55px }
.flag-ga { background-position: -16px -55px }
.flag-gb { background-position: -32px -55px }
.flag-gd { background-position: -48px -55px }
.flag-ge { background-position: -64px -55px }
.flag-gf { background-position: -80px -55px }
.flag-gg { background-position: -96px -55px }
.flag-gh { background-position: -112px -55px }
.flag-gi { background-position: -128px -55px }
.flag-gl { background-position: -144px -55px }
.flag-gm { background-position: -160px -55px }
.flag-gn { background-position: -176px -55px }
.flag-gp { background-position: -192px -55px }
.flag-gq { background-position: -208px -55px }
.flag-gr { background-position: -224px -55px }
.flag-gs { background-position: -240px -55px }
.flag-gt { background-position: 0 -66px }
.flag-gu { background-position: -16px -66px }
.flag-gw { background-position: -32px -66px }
.flag-gy { background-position: -48px -66px }
.flag-hk { background-position: -64px -66px }
.flag-hm { background-position: -80px -66px }
.flag-hn { background-position: -96px -66px }
.flag-hr { background-position: -112px -66px }
.flag-ht { background-position: -128px -66px }
.flag-hu { background-position: -144px -66px }
.flag-id { background-position: -160px -66px }
.flag-ie { background-position: -176px -66px }
.flag-il { background-position: -192px -66px }
.flag-im { background-position: -208px -66px }
.flag-in { background-position: -224px -66px }
.flag-io { background-position: -240px -66px }
.flag-iq { background-position: 0 -77px }
.flag-ir { background-position: -16px -77px }
.flag-is { background-position: -32px -77px }
.flag-it { background-position: -48px -77px }
.flag-je { background-position: -64px -77px }
.flag-jm { background-position: -80px -77px }
.flag-jo { background-position: -96px -77px }
.flag-jp { background-position: -112px -77px }
.flag-ke { background-position: -128px -77px }
.flag-kg { background-position: -144px -77px }
.flag-kh { background-position: -160px -77px }
.flag-ki { background-position: -176px -77px }
.flag-km { background-position: -192px -77px }
/* ... */

